--- a/frontend/src/Components/Offers/Offers.css
+++ b/frontend/src/Components/Offers/Offers.css
@@ -2,7 +2,7 @@
   width: 65%;
   height: 80vh;
   display: flex;
-  margin: auto;
+  margin: 100px;
   padding: 0px 140px;
   margin-bottom: 150px;
   background: linear-gradient(180deg, #fde1ff 0%, #e1ffea22 60%);
