--- a/frontend/src/Components/NewCollections/NewCollections.css
+++ b/frontend/src/Components/NewCollections/NewCollections.css
@@ -3,8 +3,9 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  height: 90vh;
+  /* height: 90vh; */
   margin-top: 100px;
+  margin-bottom: 100px;
 }
 .new-collections h1 {
   color: #171717;
