--- a/frontend/src/Pages/CSS/ShopCategory.css
+++ b/frontend/src/Pages/CSS/ShopCategory.css
@@ -21,7 +21,7 @@
   font-weight: 600;
 }
 .shopcategory-products {
-  margin: 20px 170px;
+  margin: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   row-gap: 180 px;
